Added paste and url functionality to frontend. Experimenting with image clipboard API

--- a/public/index.html
+++ b/public/index.html
@@ -4,4 +4,11 @@
 </head>
 <body>
     Hello I'm opn
+    <br>
+    <button id="god-button" class="god-button">
+        The god button
+    </button>
+    <br>
+    <img id="imgDisplay" alt="paste an image">
+    <script src="./index.js"></script>
 </body>
